More progress made with functional testing.

--- a/lists/templates/home.html
+++ b/lists/templates/home.html
@@ -6,5 +6,7 @@
 </head>
 <body>
 <h1>To-Do lists</h1>
+<p><input id="new_item_input" placeholder="Enter a to-do item" /></p>
+<p><table id="table_to-do_list"></table></p>
 </body>
 </html>
