--- a/lists/templates/home.html
+++ b/lists/templates/home.html
@@ -19,9 +19,13 @@
 
 <p>
     <table id="table_to-do_list">
-        {% for item in items %}
-            <tr><td>{{ forloop.counter }}: {{ item.text }}</td></tr>
-        {% endfor %}
+        {% if items %}
+            {% for item in items %}
+                <tr><td>{{ forloop.counter }}: {{ item.text }}</td></tr>
+            {% endfor %}
+        {% else %}
+            <p>No items found in to-do list. Nothing to display.</p>
+        {% endif %}
     </table>
 </p>
 
