--- a/lists/templates/home.html
+++ b/lists/templates/home.html
@@ -8,7 +8,7 @@
 <h1>To-Do lists</h1>
 
 <p>
-    <form method="POST">
+    <form method="POST" action="/">
         <input name="item_text"
                id="new_item_input"
                placeholder="Enter a to-do item"
