--- a/lists/templates/list.html
+++ b/lists/templates/list.html
@@ -5,7 +5,7 @@
     <title>To-Do lists</title>
 </head>
 <body>
-<h1>Start a new To-Do list</h1>
+<h1>To-Do lists</h1>
 
 <p>
     <form method="POST" action="/">
