New URL and configured in template forms. Moved and edited some code in views and tests.

--- a/lists/templates/list.html
+++ b/lists/templates/list.html
@@ -8,7 +8,7 @@
 <h1>To-Do lists</h1>
 
 <p>
-    <form method="POST" action="/">
+    <form method="POST" action="/lists/new">
         <input name="item_text"
                id="new_item_input"
                placeholder="Enter a to-do item"
