--- a/lists/templates/home.html
+++ b/lists/templates/home.html
@@ -8,7 +8,7 @@
 <h1>Start a new To-Do list</h1>
 
 <p>
-    <form method="POST" action="/">
+    <form method="POST" action="/lists/new">
         <input name="item_text"
                id="new_item_input"
                placeholder="Enter a to-do item"
