--- a/lists/templates/list.html
+++ b/lists/templates/list.html
@@ -8,7 +8,7 @@
 <h1>To-Do lists</h1>
 
 <p>
-    <form method="POST" action="/lists/new">
+    <form method="POST" action="/lists/{{ list.id }}/add_item">
         <input name="item_text"
                id="new_item_input"
                placeholder="Enter a to-do item"
@@ -19,8 +19,8 @@
 
 <p>
     <table id="table_to-do_list">
-        {% if items %}
-            {% for item in items %}
+        {% if list.item_set.all %}
+            {% for item in list.item_set.all %}
                 <tr><td>{{ forloop.counter }}: {{ item.text }}</td></tr>
             {% endfor %}
         {% else %}
