--- a/lists/templates/home.html
+++ b/lists/templates/home.html
@@ -1,33 +1,5 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <title>To-Do lists</title>
-</head>
-<body>
-<h1>Start a new To-Do list</h1>
+{% extends 'base.html' %}
 
-<p>
-    <form method="POST" action="/lists/new">
-        <input name="item_text"
-               id="new_item_input"
-               placeholder="Enter a to-do item"
-        />
-        {% csrf_token %}
-    </form>
-</p>
+{% block header_text %}Start a new To-Do list{% endblock %}
 
-<p>
-    <table id="table_to-do_list">
-        {% if items %}
-            {% for item in items %}
-                <tr><td>{{ forloop.counter }}: {{ item.text }}</td></tr>
-            {% endfor %}
-        {% else %}
-            <p>No items found in to-do list. Nothing to display.</p>
-        {% endif %}
-    </table>
-</p>
-
-</body>
-</html>
+{% block form_action%}/lists/new{% endblock %}
