--- a/lists/templates/base.html
+++ b/lists/templates/base.html
@@ -3,23 +3,37 @@
 <head>
   <meta charset="UTF-8">
   <title>To-Do lists</title>
+  {% load static %}
+  <link rel="stylesheet" type="text/css" href="{% static 'bootstrap/css/bootstrap.min.css' %}" />
 </head>
 <body>
+  <div class="container">
 
-<h1>{% block header_text %}{% endblock %}</h1>
+    <div class="row">
+      <div class="col-md-12 jumbotron">
+        <div class="text-center">
+          <h1>{% block header_text %}{% endblock %}</h1>
+          <p>
+            <form method="POST" action="{% block form_action%}{% endblock %}">
+              <input name="item_text"
+                     id="new_item_input"
+                     class="form-control input-lg"
+                     placeholder="Enter a to-do item"
+              />
+              {% csrf_token %}
+            </form>
+          </p>
+        </div>
+      </div>
+    </div>
 
-<p>
-  <form method="POST" action="{% block form_action%}{% endblock %}">
-    <input name="item_text"
-           id="new_item_input"
-           placeholder="Enter a to-do item"
-    />
-    {% csrf_token %}
-  </form>
-</p>
+    <div class="row">
+      <div class="col-md-6 col-md-offset-3">
+        {% block table %}
+        {% endblock table %}
+      </div>
+    </div>
 
-{% block table %}
-{% endblock table %}
-
+  </div>
 </body>
 </html>
