--- a/lists/templates/base.html
+++ b/lists/templates/base.html
@@ -5,6 +5,7 @@
   <title>To-Do lists</title>
   {% load static %}
   <link rel="stylesheet" type="text/css" href="{% static 'bootstrap/css/bootstrap.min.css' %}" />
+  <link rel="stylesheet" type="text/css" href="{% static 'base.css' %}" />
 </head>
 <body>
   <div class="container">
